перейменовані файли gpg та уточнена адреса

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="./images/PC.jpg"
+              src="./images/pc.jpg"
               alt="Десктопные приложения"
               width="370"
               height="294"
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img
-              src="./images/Mobile.jpg"
+              src="./images/mobile.jpg"
               alt="Мобильные приложения"
               width="370"
               height="294"
@@ -81,7 +81,7 @@
           </li>
           <li>
             <img
-              src="./images/Design.jpg"
+              src="./images/design.jpg"
               alt="Дизайнерские решения"
               width="370"
               height="294"
@@ -94,7 +94,7 @@
         <ul>
           <li>
             <img
-              src="./images/photoIDemianenko.jpg"
+              src="./images/photoidemianenko.jpg"
               alt="фото Игоря Демьяненко"
               width="270"
               height="260"
@@ -104,7 +104,7 @@
           </li>
           <li>
             <img
-              src="./images/photoORepina.jpg"
+              src="./images/photoorepina.jpg"
               alt="фото Ольги Репиной"
               width="270"
               height="260"
@@ -114,7 +114,7 @@
           </li>
           <li>
             <img
-              src="./images/photoNTarasov.jpg"
+              src="./images/photontarasov.jpg"
               alt="фото Николая Тарасова"
               width="270"
               height="260"
@@ -124,7 +124,7 @@
           </li>
           <li>
             <img
-              src="./images/photoMYermakov.jpg"
+              src="./images/photomyermakov.jpg"
               alt="фото Михаила Ермакова"
               width="270"
               height="260"
@@ -138,8 +138,8 @@
     <footer>
       <a href="./index.html"> WebStudio </a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26
         <ul>
+          <li>a href=«посилання на google map" target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
           <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
